--- a/e-commerce-app/client/src/styles.css
+++ b/e-commerce-app/client/src/styles.css
@@ -3,7 +3,6 @@ body {
 }
 
 header {
-  margin-bottom: 5px;
   position: sticky;
   top: 0px;
   background-color: #252a34;
@@ -62,4 +61,9 @@ header {
 
 .brand::hover {
   color: #ff2e63;
+}
+
+Swiper {
+  max-height: 80vh;
+  width: 100%;
 }
